# plox

./: files.py  grammar.lox  pyproject.toml  test.lox  visitor.py
plox/: __main__.py
plox/ast/: expr.py  stmt.py
plox/core/: interpreter.py  parser.py  scanner.py  token.py
plox/runtime/: environment.py  errors.py
src/plox/: __init__.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py
tests/golden/: lexing.lox
