[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plox"
version = "0.1.0"
description = "Python implementation of Rob Nystrom's jlox."
authors = [
  { name = "Javier Arambula" }
]
requires-python = ">=3.14"
dependencies = [
  "pytest",
]

[tool.setuptools]
include-package-data = true
packages = ["plox"]

[project.scripts]
plox = "plox.__main__:main"