[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plox"
version = "0.1.0"
description = "Python implementation of Rob Nystrom's jlox."
authors = [
  { name = "Javier Arambula" }
]
requires-python = ">=3.14"
dependencies = [
  "pytest",
  "typer>=0.20.0",
]

[tool.setuptools]
include-package-data = true
packages = ["plox"]

[project.scripts]
lox = "plox.__main__:app"
